2005-11-22  Brian Cameron <Brian.Cameron@sun.com>

	* gui/gdmconfig.c: Remove value_set_hash
	  since it isn't really needed.  Further
	  cleanup.

2005-11-22  Brian Cameron <Brian.Cameron@sun.com>

	* daemon/gdmconfig.c, gui/gdmconfig.c: Minor
	  tweaks.  Honor doing_update when doing
	  translations and don't translate Welcome
	  or RemoteWelcome in the daemon since it
	  does not make sense to do this here.

2005-11-22  Brian Cameron <Brian.Cameron@sun.com>

	* daemon/cookie.c, daemon/gdm.c, daemon/xdmcp.c,	
	  gui/gdmchooser.c, gui/greeter/greeter_events.c,
	  gui/greeter/greeter_item_ulist.c,
	  gui/greeter/greeter_parser.[ch],
	  gui/modules/dwellmouselistener.c,
	  gui/modules/keymouselistener.c: Fix
          compiler warnings.  Fixes bug #322053.
          Patch provided by Frederic Crozat.  Patch
	  required some work to apply to CVS head.

2005-11-22  Brian Cameron <Brian.Cameron@sun.com>

        * gui/gdmlogin.c: Now use GDK_RGB_DITHER_MAX
          so that GDM always displays a nice background
          regardless of X configuration (X in 16bpp mode).
          Fixes bug #322029.  Patch provided by Frederic
          Crozat.

2005-11-22  Brian Cameron <Brian.Cameron@sun.com>

	* configure.in, vicious-extensions/ve-misc.c:
	  Fix build on Darwin.  Fixes bug #322085.
	  Patch provided by dmacks@netspace.org.

2005-11-22  Brian Cameron <Brian.Cameron@sun.com>

	* NEWS: Updated so it has 2.8.0.6 info.

2005-11-22  Brian Cameron <Brian.Cameron@sun.com>

	* daemon/getvt.c: Fix get_free_vt_linux so
	  it returns the correct VT.  Fixes bug
	  #322137.  Patch by Frederic Crozat.

2005-11-21  Brian Cameron <Brian.Cameron@sun.com>

	This further improves GDM configuration so that
	now only the GDM daemon parses and manages the
	configuration file.  Most client programs use
	the GET_CONFIG command to access needed data.
	This simplifies the configuration logic and 
	puts all configuration parsing in one place
	and gets rid of a lot of global variables that