@@ -24,6 +24,10 @@
 #include <string.h>
 #include <syslog.h>
 
+#ifdef HAVE_CRT_EXTERNS_H
+#include <crt_externs.h>
+#endif
+
 #include <X11/Xlib.h>
 #include <X11/Xutil.h>
 #include <X11/keysym.h>
@@ -96,7 +100,12 @@ typedef struct {
 
 static int xinput_types[N_INPUT_TYPES];
 
-extern char     **environ;
+#ifdef HAVE__NSGETENVIRON
+#define environ (*_NSGetEnviron())
+#else
+extern char **environ;
+#endif
+
 static gboolean debug_gestures = FALSE;
 static GSList   *gesture_list  = NULL;
 static int      lineno         = 0;
