@@ -1,5 +1,12 @@
 2005-11-22  Brian Cameron <Brian.Cameron@sun.com>
 
+        * gui/modules/keymouselistener.c,
+          gui/modules/dwellmouselistener.c:  
+          Fix build on Darwin.  Fixes bug #322085.
+          Patch provided by dmacks@netspace.org.
+
+2005-11-22  Brian Cameron <Brian.Cameron@sun.com>
+
 	* gui/gdmconfig.c: Remove value_set_hash
 	  since it isn't really needed.  Further
 	  cleanup.
